fixed issue with read more/read less on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ body {
     justify-content: flex-start;
 }
 
+.internal:active {
+    background-color: rgb(17, 17, 34);
+}
+
 .external {
     display: flex;
     flex-direction: row-reverse;
@@ -73,6 +77,7 @@ body {
     height: 30px;
     width: 30px;
     background-color: #EAECEE;
+    z-index: 1;
 }
 
 /* Title Page */
@@ -180,9 +185,7 @@ body {
 }
 
 .projectDescription {
-    margin-left: 12px;
-    margin-right: 12px;
-    margin-top: 0;
+    margin: 0 12px 0;
     font-size: 1.25em;
 }
 
